package com.github.mathlon26.ribble.ecs.component;

public class TransformComponent {
}
