package com.github.mathlon26.ribble.ecs.system;

public class System {
}
