package com.github.mathlon26.ribble.ecs.system;

public class UISystem extends System{
    public UISystem() {
        super();
    }

    @Override
    public void start() {

    }

    @Override
    public void update() {

    }

    @Override
    public void destroy() {

    }
}
